Updated out of date links
The website has been migrated from the tiiny.site host to github, therefore this change was needed

--- a/legal.html
+++ b/legal.html
@@ -63,7 +63,7 @@
                 <p>I am not an IT professional/ consultant, and I cannot provide professional advice as it is not in my legal rights, if you take my advice you do this at your own risk, I cannot be held legally responsible for any of the outcomes that arise from you taking the advice that is featured on this website.</p>
         <h1 id="Privacy-Policy">Privacy policy</h3>
                 <p>This privacy policy is a part of the main legal terms and conditions that you must agree to when using this website.</p>
-                <p>At Hackboto Tech Tips, accessible from <a title="Go To Website" href="https://hackbototechtips.tiiny.site">https://hackbototechtips.tiiny.site/</a>, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Hackboto Tech Tips and how we use it.</p>
+                <p>At Hackboto Tech Tips, accessible from <a title="Go To Website" href="https://hackbototechtips.github.io/">https://hackbototechtips.github.io</a>, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Hackboto Tech Tips and how we use it.</p>
                 <p>Our Privacy Policy was generated with the help of <a title="View Website" href="https://www.gdprprivacypolicy.net/">GDPR Privacy Policy Generator</a></p>
             <h2 id="GDPR">General Data Protection Regulation (GDPR)</h2>
                 <p>We are a Data Controller of your information.</p>
