--- a/pc_tips/windows_debloat.html
+++ b/pc_tips/windows_debloat.html
@@ -78,7 +78,7 @@
                     <p>The Hackboto Tech Tips System_Settings_Optimiser and User_Settings_Optimiser works by changing registry entries on your computer system, this allows the script to gain access to hidden system settings that control things like the level of telemetry is collected, the content that is delivered to your computer system. The script also works by disabling telemetry and data collection services that are running on your computer.</p>
                     <p>The Hackboto Tech Tips System_Settings_Optimiser and User_Settings_Optimiser are ideal for people who do not have a high level of technical knowledge and want something that is quick and easy to use.</p>
                     <p>You can learn more about the Hackboto Tech Tips System_Settings_Optimiser & User_Settings_Optimiser by clicking on the link below.</p>
-                    <a class="linkbutton" title="Visit Settings Optimiser Download Page" href="https://hackbototechtips.tiiny.site/download_centre/settings_optimiser.html">Learn More</a>
+                    <a class="linkbutton" title="Visit Settings Optimiser Download Page" href="https://hackbototechtips.github.io/download_centre/settings_optimiser.html">Learn More</a>
             <h3 id="chris-titus">Chris Titus: Ultimate Windows Utility</h3>
                 <img src="windows_debloat/chris_titus_tool.png" alt="an image representing the Chris Titus: Ultimate Windows Utility">
                     <p id="imgdescription">It might look complicated, but it is really simple to use, you simply click on the options you want to enable/ disable and click the run tweaks button at the bottom.</p>
