Updated nav bar
Updated nav bar in an effort to improve SEO score

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <a href="" title="Visit Contact page">Contact (Coming Soon)</a>
         </div>
         <div class="columnclose">
-            <div class="nav"><a href="javascript:void(0);" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</a></div> <!-- Navigation hamburger icon -->
+            <div class="nav"><a href="javascript:void(0);" rel="nofollow" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</a></div> <!-- Navigation hamburger icon -->
         </div>
     </nav>
     <br>
