Add new webpages
Added new fix hardware acceleration black screen fix and Download MPO fix pages

--- a/legal.html
+++ b/legal.html
@@ -23,7 +23,7 @@
     <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
         <div class="columnnav">
             <a href="index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-            <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Tips & Tricks</a>
+            <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
             <a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
             <a href="" title="Visit Contact page">Contact (Coming Soon)</a>
         </div>
