--- a/map.html
+++ b/map.html
@@ -23,7 +23,7 @@
     <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
         <div class="columnnav">
             <a href="index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-            <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Tips & Tricks</a>
+            <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
             <a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
             <a href="" title="Visit Contact page">Contact (Coming Soon)</a>
         </div>
@@ -39,7 +39,7 @@
             </ul>
         </div>
         <div title="Level 2 pages"> <!-- Level 2 -->
-            <h2><a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Tips & Tricks</a></h2> <!-- Level 2 heading -->
+            <h2><a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a></h2> <!-- Level 2 heading -->
             <ul> <!-- Unordered list -->
                 <li><h3><a href="pc_tips/windows_debloat.html" title="Learn how and why you should debloat your PC.">Debloating Windows 11 24H2</a></h3></li>
             </ul>
