--- a/pc_tips.html
+++ b/pc_tips.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8"> <!-- Define character encoding for the document -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Set the viewport for responsive design -->
-    <meta name="description" content="This is the Hackboto Tech Tips PC Tips & Tricks page, this is where you find all of my tips and tricks for optimising and making the best use of your PC.">
+    <meta name="description" content="This is the Hackboto Tech Tips PC Guides page, this is where you find all of my tips and tricks for optimising and making the best use of your PC.">
     <meta name="keywords" content="Windows 11, Windows 10, Tips, Debloat, Adware, Remove, Optimise">
     <meta name="robots" content="index, follow"> <!-- Allow search engine indexing -->
     <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="favicon/HTTfavicon.png">
     <script src="scripts.js"></script> <!-- Link to external JavaScript file -->
-    <title>PC Tips & Tricks | Hackboto Tech Tips</title> <!-- Document title -->
+    <title>PC Guides | Hackboto Tech Tips</title> <!-- Document title -->
 </head>
 <body>
     <header> <!-- Header section -->
@@ -23,7 +23,7 @@
     <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
         <div class="columnnav">
             <a href="index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-            <a class="active" href="pc_tips.html" title="Explore tips and tricks for your PC">PC Tips & Tricks</a>
+            <a class="active" href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
             <a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
             <a href="" title="Visit Contact page">Contact (Coming Soon)</a>
         </div>
@@ -32,11 +32,10 @@
         </div>
     </nav>
     <br>
-    <section id="pc_tips" title="PC Tips & Tricks"> <!-- Section for PC Tips and Tricks -->
+    <section id="pc_tips" title="PC Guides"> <!-- Section for PC Tips and Tricks -->
         <div class="pagewelcome">
-            <h1>PC Tips & Tricks</h1> <!-- Page heading -->
+            <h1>PC Guides</h1> <!-- Page heading -->
             <p>On this page you will find all my helpful tips and tricks regarding your personal computer, you will find tips on reducing the number of ads you see, improving your system performance, getting the most out of your existing computer, and much more.</p> <!-- Page description -->
-            <p>This website is still being constructed, bear with me as I am only human and cannot get everything up and running at once, there will more content added to this website as the weeks and months go on so make sure that you keep revisiting the website on a regular basis.</p>
         </div>
     </section>
     <br>
@@ -49,11 +48,11 @@
                 <p>Are you getting sick and tired of popups telling you to sign up for X Y Z, are you getting sick of constant notifications, and are you getting sick of poor performance from your PC, if so, read on.</p> <!-- Article excerpt -->
                 <a href="pc_tips/windows_debloat.html" title="Read about debloating Windows 11 24H2">Read Article</a> <!-- Link to full article -->
             </div>
-            <div class="articlecolumn" title="Getting the content ready"> <!-- Article column -->
-                <h3>Getting the content ready</h3> <!-- Article title -->
-                <img src="pc_tips/placeholder.png" alt="just an image that reads out placeholder" title="placeholder image"><!-- Image related to the article -->
-                <p>There is not much here at the moment, bear with me as I am still getting the website constructed.</p> <!-- Article excerpt -->
-                <a href="" title="dead link">More Coming Soon</a> <!-- Link to full article -->
+            <div class="articlecolumn" title="Fix Hardware Acceleration Black Screen"> <!-- Article column -->
+                <h3>Fix Hardware Acceleration Black Screen</h3> <!-- Article title -->
+                <img src="pc_tips/hardware_acceleration_black_screen_fix/black_artefacts_mockup.png" alt="An image showing black squares on Microsoft Word" title="mock-up illustrating hardware acceleration artefacts"><!-- Image related to the article -->
+                <p>Are you having issues with black screens, black boxes, black checkerboards etc on your Windows 10/ 11 PC? If you are, learn how you can fix the problem without disabling Hardware Acceleration.</p> <!-- Article excerpt -->
+                <a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn About Fixing Black Screens and Artefacts in Windows 10/ 11 Without Disabling HW Acceleration">Read Article</a> <!-- Link to full article -->
             </div>
             <div class="articlecolumn" title="Getting the content ready"> <!-- Article column -->
                 <h3>Getting the content ready</h3> <!-- Article title -->
