--- a/download_centre.html
+++ b/download_centre.html
@@ -23,7 +23,7 @@
     <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
         <div class="columnnav">
             <a href="index.html" title="Go to Home">Home</a> <!-- Navigation links -->
-            <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Tips & Tricks</a>
+            <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
             <a class="active" href="download_centre.html" title="Find file downloads here.">Download Centre</a>
             <a href="" title="Visit Contact page">Contact (Coming Soon)</a>
         </div>
@@ -48,6 +48,12 @@
                 <img src="download_centre/system_settings_optimiser.png" alt="An image representing the Hackboto Tech Tips Settings Optimiser" title="Image representing the Settings Optimiser Software"><!-- Image related to the article -->
                 <p>The Hackboto Tech Tips Settings Optimiser will optimise the settings on your Windows 10/ 11 based PC so that your personal data is more secure, you have less bloatware and advertisements, and general settings changes to ensure that your PC runs as efficiently as possible.</p> <!-- Article excerpt -->
                 <a href="download_centre/settings_optimiser.html" title="Visit Settings Optimiser">Download Page</a> <!-- Link to full article -->
+            </div>
+            <div class="articlecolumn" title="MPO Fix"> <!-- Article column -->
+                <h3>MPO Fix .reg</h3> <!-- Article title -->
+                <img src="download_centre/multi-pane_overlay_disable_reg/disable_mpo.png" alt="An image representing the Hackboto Tech Tips Settings Optimiser" title="Image representing the Settings Optimiser Software"><!-- Image related to the article -->
+                <p>Download and learn to use the Multi-Plane Overlay Fix Registry Files. These files can be used to fix the black artifacts and black screen issues that are often associated Hardware Acceleration.</p> <!-- Article excerpt -->
+                <a href="download_centre/multi-pane_overlay_disable_reg.html" title="Visit MPO Fix download page">Download Page</a> <!-- Link to full article -->
             </div>
         </div>
     </section>
