--- a/map.html
+++ b/map.html
@@ -42,10 +42,12 @@
             <h2><a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a></h2> <!-- Level 2 heading -->
             <ul> <!-- Unordered list -->
                 <li><h3><a href="pc_tips/windows_debloat.html" title="Learn how and why you should debloat your PC.">Debloating Windows 11 24H2</a></h3></li>
+                <li><h3><a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn how you can fix the back screen artefacts caused by hardware acceleration.">Fix Hardware Acceleration Black Screen</a></h3></li>
             </ul>
             <h2><a href="download_centre.html" title="Go to File Downloads">Download Centre</a></h2>
                 <ul><!-- Unordered list -->
                     <li><h3><a href="download_centre/settings_optimiser.html" title="Go to Settings Optimiser download page">Settings Optimiser</a></h3></li>
+                    <li><h3><a href="download_centre/multi-pane_overlay_disable_reg.html" title="Go to Multi-Plane Overlay fix download page">MPO Fix .reg</a></h3></li>
                 </ul>
             <h2><a href="legal.html" title="Go to Legal">Legal</a></h2> <!-- Level 2 heading -->
         </div>
