Added new guide
Added upgrading to Windows 11 guide

--- a/map.html
+++ b/map.html
@@ -41,6 +41,7 @@
         <div title="Level 2 pages"> <!-- Level 2 -->
             <h2><a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a></h2> <!-- Level 2 heading -->
             <ul> <!-- Unordered list -->
+                <li><h3><a href="pc_tips/upgrading_to_windows11.html" title="Learn how and why you should upgrade to Windows 11">Upgrade to Windows 11</a></h3></li>
                 <li><h3><a href="pc_tips/windows_debloat.html" title="Learn how and why you should debloat your PC.">Debloating Windows 11 24H2</a></h3></li>
                 <li><h3><a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn how you can fix the back screen artefacts caused by hardware acceleration.">Fix Hardware Acceleration Black Screen</a></h3></li>
             </ul>
