--- a/pc_tips.html
+++ b/pc_tips.html
@@ -42,6 +42,12 @@
     <section class="articles" title="Articles"> <!-- Section for articles -->
         <h2>Articles</h2> <!-- Section heading -->
         <div class="articlerow"> <!-- Article row -->
+            <div class="articlecolumn" title="Upgrading To Windows 11"> <!-- Article column -->
+                <h3>Upgrade to Windows 11</h3> <!-- Article title -->
+                <img src="pc_tips/upgrading_to_windows11/upgradefrom10to11.jpg" alt="Upgrade from Windows 10 to Windows 11" title="Upgrade from Windows 10 to Windows 11"><!-- Image related to the article -->
+                <p>Did you know that Windows 10 is EOL in 2025, if you do not upgrade to Windows 11 by then you will no longer receive security updates, this article will explain what you need know and what you need to do to upgrade to Windows 11.</p> <!-- Article excerpt -->
+                <a href="pc_tips/upgrading_to_windows11.html" title="Read More about upgrading to Windows 11">Read Article</a> <!-- Link to full article -->
+            </div>
             <div class="articlecolumn" title="Debloat Windows 11 24H2"> <!-- Article column -->
                 <h3>Debloat Windows 11 24H2</h3> <!-- Article title -->
                 <img src="pc_tips/debloat.png" alt="An image representing bloat turning into a simplistic interface." title="Image representing the bloat in Windows 11."><!-- Image related to the article -->
@@ -53,12 +59,6 @@
                 <img src="pc_tips/hardware_acceleration_black_screen_fix/black_artefacts_mockup.png" alt="An image showing black squares on Microsoft Word" title="mock-up illustrating hardware acceleration artefacts"><!-- Image related to the article -->
                 <p>Are you having issues with black screens, black boxes, black checkerboards etc on your Windows 10/ 11 PC? If you are, learn how you can fix the problem without disabling Hardware Acceleration.</p> <!-- Article excerpt -->
                 <a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn About Fixing Black Screens and Artefacts in Windows 10/ 11 Without Disabling HW Acceleration">Read Article</a> <!-- Link to full article -->
-            </div>
-            <div class="articlecolumn" title="Getting the content ready"> <!-- Article column -->
-                <h3>Getting the content ready</h3> <!-- Article title -->
-                <img src="pc_tips/placeholder.png" alt="just an image that reads out placeholder" title="placeholder image"><!-- Image related to the article -->
-                <p>There is not much here at the moment, bear with me as I am still getting the website constructed.</p> <!-- Article excerpt -->
-                <a href="" title="dead link">More Coming Soon</a> <!-- Link to full article -->
             </div>
             <div class="articlecolumn" title="Getting the content ready"> <!-- Article column -->
                 <h3>Getting the content ready</h3> <!-- Article title -->
