--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Hackboto Tech Tips offers help and advice to those who are struggling with modern tech, we offer advice and support on maintaining devices, buying the latest devices, and optimising their existing devices to better meet their needs.">
     <meta name="keywords" content="tech, tips, windows, help, advice, support, debloat">
     <meta name="robots" content="index, follow"> <!-- Allow search engine indexing -->
-    <meta name="google-site-verification" content="f8S6yQTL9ORzSZWiIDBfWoLoQwuuY6HW2ENlfExnMmo" />
+    <meta name="google-site-verification" content="f8S6yQTL9ORzSZWiIDBfWoLoQwuuY6HW2ENlfExnMmo">
     <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="favicon/HTTfavicon.png">
     <script src="scripts.js"></script> <!-- Link to external JavaScript file -->
