Fixed error on legal
Fixed a double use of rel="nofollow"

--- a/legal.html
+++ b/legal.html
@@ -28,7 +28,7 @@
             <a href="" title="Visit Contact page">Contact (Coming Soon)</a>
         </div>
         <div class="columnclose">
-            <div class="nav"><a href="javascript:void(0);" rel="nofollow" rel="nofollow" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</a></div> <!-- Navigation hamburger icon -->
+            <div class="nav"><a href="javascript:void(0);" rel="nofollow" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</a></div> <!-- Navigation hamburger icon -->
         </div>
     </nav>
     <aside title="Jump To Section"> <!-- Aside section for additional content -->
