--- a/legal.html
+++ b/legal.html
@@ -61,23 +61,22 @@
                 <p>I provide no warranty for any of the software that is distributed or recommended by this website, this means that you use all of the software featured and distributed on this website at your own risk, I cannot be held responsible for any implications that might arise as a result of your use of this software, I also am not required to assist with any problems that you encounter when using the software and you must find your own solutions if I have not already outlined any.</p>
             <h2 id="no-professional-advice">No professional advice on this website.</h2>    
                 <p>I am not an IT professional/ consultant, and I cannot provide professional advice as it is not in my legal rights, if you take my advice you do this at your own risk, I cannot be held legally responsible for any of the outcomes that arise from you taking the advice that is featured on this website.</p>
-        <h1 id="Privacy-Policy">Privacy policy</h3>
+        <h1 id="Privacy-Policy">Privacy policy</h1>
                 <p>This privacy policy is a part of the main legal terms and conditions that you must agree to when using this website.</p>
                 <p>At Hackboto Tech Tips, accessible from <a title="Go To Website" href="https://hackbototechtips.github.io/">https://hackbototechtips.github.io</a>, one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by Hackboto Tech Tips and how we use it.</p>
                 <p>Our Privacy Policy was generated with the help of <a title="View Website" href="https://www.gdprprivacypolicy.net/">GDPR Privacy Policy Generator</a></p>
             <h2 id="GDPR">General Data Protection Regulation (GDPR)</h2>
                 <p>We are a Data Controller of your information.</p>
-                <p>Hackboto Tech Tips legal basis for collecting and using the personal information described in this Privacy Policy depends on the Personal Information we collect and the specific context in which we collect the information:
+                <p>Hackboto Tech Tips legal basis for collecting and using the personal information described in this Privacy Policy depends on the Personal Information we collect and the specific context in which we collect the information: </p>
                     <ul>
                         <li>Hackboto Tech Tips needs to perform a contract with you</li>
                         <li>You have given Hackboto Tech Tips permission to do so</li>
                         <li>Processing your personal information is in Hackboto Tech Tips legitimate interests</li>
                         <li>Hackboto Tech Tips needs to comply with the law</li>
                     </ul>
-                </p>
                 <p>Hackboto Tech Tips will retain your personal information only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use your information to the extent necessary to comply with our legal obligations, resolve disputes, and enforce our policies.</p>
                 <p>If you are a resident of the European Economic Area (EEA), you have certain data protection rights. If you wish to be informed what Personal Information we hold about you and if you want it to be removed from our systems, please contact us.</p>
-                <p>In certain circumstances, you have the following data protection rights:
+                <p>In certain circumstances, you have the following data protection rights: </p>
                     <ul>
                         <li>The right to access, update or to delete the information we have on you.</li>
                         <li>The right of rectification.</li>
@@ -86,7 +85,6 @@
                         <li>The right to data portability</li>
                         <li>The right to withdraw consent</li>
                     </ul>
-                </p>
             <h2 id="log-files">Log Files</h2>
                 <p>Hackboto Tech Tips follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services' analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users' movement on the website, and gathering demographic information.</p>
             <h2 id="thirdpartyprivacypolicies">Third Party Privacy Policies</h2>
