--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -109,13 +109,12 @@
         <p><strong>If you see a screen that says 'Installing Windows Server' do not be alarmed, this is normal when upgrading to Windows 11 on an unsupported PC.</strong></p>
         <p>The upgrade to Windows 11 can take a very long time, especially if you have an older computer. The upgrade process can be as little as 10 minutes or take several hours to complete, just be patient and make sure that your device is plugged in and on charge.</p>
         <h2 id="what-to-do-after-upgrading">What you need to do after upgrading to Windows 11</h2>
-            <p>After your computer has finished upgrading to Windows 11, there are three things that I recommend you do: 
+            <p>After your computer has finished upgrading to Windows 11, there are three things that I recommend you do: </p>
                 <ol>
                     <li>Check for Windows Updates</li>
                     <li>Optimise your computer</li>
                     <li>Debloat your computer</li>
                 </ol>
-            </p>
             <p>Checking for updates is really easy on Windows 11 as you just need to open the Settings app and navigate to 'Windows Update', alternatively you can use the link below to check for Windows updates.</p>
             <a class="linkbutton" title="Launch Settings: Check for Windows updates." href="ms-settings:windowsupdate">Check for Windows updates</a>
             <p><strong>A guide on optimising your computer system is underway, until then you will just have to wait.</strong></p>
