--- a/pc_tips/windows_debloat.html
+++ b/pc_tips/windows_debloat.html
@@ -48,7 +48,7 @@
     <article title="Main Article Content"> <!-- Main article content -->
         <h1 id="Article-Title">Debloating Windows 11 24H2</h1>
             <img src="windows_debloat/windows11.png" alt="an image representing an ad free Windows 11 experience.">
-                <p id="imgdescription">Windows 11 is free of adware and spyware if you set it up correctly, read on to learn how you can achieve this.</p>
+                <p class="imgdescription">Windows 11 is free of adware and spyware if you set it up correctly, read on to learn how you can achieve this.</p>
             <h2 id="Introduction">Introduction</h2>
                 <p>Have you noticed that your computer is full of apps that you don't use? Have you noticed that your computer is constantly telling you to try a new awesome feature or save money by doing X Y or Z? Have you noticed that your computer is getting just slower in general since upgrading to Windows 10/ 11?</p>
                 <p>If you have noticed one or more of these things it is because your computer is full of unnecessary bloat, adverts, and tracking, this makes your computer work much harder than it needs to, this results in a perceived slowdown in older computers as they age.</p>
@@ -62,43 +62,41 @@
                 <p>Most new computers come with a Microsoft Windows licence bundled in with the price of the hardware, this means that if you do decide to get a new computer because of the bloat, Microsoft are still making money from you, and you are now out of pocket and creating E-waste in the process.</p>
             <h3 id="ways-to-debloat">What are the different ways I can debloat my Windows 11 computer?</h3>
                 <p>There are many different methods that you can use for debloating your Windows 10/ 11 computer, these vary widely in complexity, it is possible for you to manually delete apps you don't want installed and manually disable the bloatware through things like Group Policy Editor, it is also possible for you to use automated scripts or advanced tools that allow you to disable and uninstall the bloat from your computer.</p>
-                <p>There are a few tools that I would recommend for debloating your computer system including:
+                <p>There are a few tools that I would recommend for debloating your computer system including: </p>
                     <ol>
                         <li>Hackboto Tech Tips: System_Settings_Optimiser</li>
                         <li>Hackboto Tech Tips: User_Settings_Optimiser</li>
                         <li>Chris Titus: Ultimate Windows Utility</li>
                         <li>O&O Software: O&O ShutUp10++</li>
                     </ol>
-                </p>
                 <p><strong>I advise you to use caution when using random cleanup and debloat tools from the internet as some of these might not be correctly tested or might be malicious and intentionally damage your computer system, therefore I recommend that you stick to the scripts and tools that I have tested personally.</strong></p>
                 <p><strong>Before you run any scripts on your computer system, I would advise you to back up your system first so that you can restore it back to its previous state in the event that anything goes wrong.</strong> Guide on this coming soon!</p>
             <h3 id="hackboto-settings-script">Hackboto Tech Tips: System_Settings_Optimiser & User_Settings_Optimiser</h3>
                 <img src="windows_debloat/settings_optimise_image.png" alt="an image representing the Hackboto Tech Tips settings optimiser scripts.">
-                    <p id="imgdescription">It might not be the prettiest solution but the Hackboto Tech Tips System_Settings_Optimiser & the User_Settings_Optimiser scripts are really simple to use and require no technical knowledge to operate.</p>
+                    <p class="imgdescription">It might not be the prettiest solution but the Hackboto Tech Tips System_Settings_Optimiser & the User_Settings_Optimiser scripts are really simple to use and require no technical knowledge to operate.</p>
                     <p>The Hackboto Tech Tips System_Settings_Optimiser and User_Settings_Optimiser works by changing registry entries on your computer system, this allows the script to gain access to hidden system settings that control things like the level of telemetry is collected, the content that is delivered to your computer system. The script also works by disabling telemetry and data collection services that are running on your computer.</p>
                     <p>The Hackboto Tech Tips System_Settings_Optimiser and User_Settings_Optimiser are ideal for people who do not have a high level of technical knowledge and want something that is quick and easy to use.</p>
                     <p>You can learn more about the Hackboto Tech Tips System_Settings_Optimiser & User_Settings_Optimiser by clicking on the link below.</p>
                     <a class="linkbutton" title="Visit Settings Optimiser Download Page" href="https://hackbototechtips.github.io/download_centre/settings_optimiser.html">Learn More</a>
             <h3 id="chris-titus">Chris Titus: Ultimate Windows Utility</h3>
                 <img src="windows_debloat/chris_titus_tool.png" alt="an image representing the Chris Titus: Ultimate Windows Utility">
-                    <p id="imgdescription">It might look complicated, but it is really simple to use, you simply click on the options you want to enable/ disable and click the run tweaks button at the bottom.</p>
+                    <p class="imgdescription">It might look complicated, but it is really simple to use, you simply click on the options you want to enable/ disable and click the run tweaks button at the bottom.</p>
                         <p>This tool is good because you do not need to download any scripts or anything to run it, just need to open the Terminal as an Admin.</p>
-                        <p>To open Terminal as an admin:
+                        <p>To open Terminal as an admin: </p>
                             <ol>
                                 <li>Right click on the start button 🪟.</li>
                                 <li>Click on "Terminal (Admin)".</li>
                                 <li>In the User Account Control popup, click yes. *You may need to enter your admin account password.</li>
                             </ol>
-                        </p>
                         <img src="windows_debloat/chris_titus_tool_options.png" alt="image showing the customized preferences and the essential tweaks that I advise people to use.">
-                        <p id="imgdescription">These are the options I would advise you use on the Tweaks tab, once you set them to your preference, you need to click the "Run Tweaks" button at the bottom of the page.</p>
+                        <p class="imgdescription">These are the options I would advise you use on the Tweaks tab, once you set them to your preference, you need to click the "Run Tweaks" button at the bottom of the page.</p>
                         <p>You can learn more about the Chris Titus: Ultimate Windows Utility by clicking on the link to the official webpage below.</p>
                         <a class="linkbutton" title="Visit Chris Titus Website" href="https://christitus.com/windows-tool/">Visit Chris Titus Webpage</a>
             <h3 id="ShutUp10">O&O Software: O&O ShutUp10++</h3>
                 <img src="windows_debloat/shutup10.png" alt="an image representing the O&O Software: O&O ShutUp10++">
-                    <p id="imgdescription">O&O ShutUp10 might be quite intimidating at first, however it is really easy to use, you simply click on the options and toggle them on (green) or off (red).</p>
+                    <p class="imgdescription">O&O ShutUp10 might be quite intimidating at first, however it is really easy to use, you simply click on the options and toggle them on (green) or off (red).</p>
                     <p>There are two tabs on O&O ShutUp10, Current User and Local Machine. Current User means that the settings applied will only apply to the user who is running the tool, if you have more than one profile on your computer yours will be the only one that is impacted. Local Machine is the same as Current User, however it has more options available and will apply to all of the user profiles on your computer.</p>
-                    <p>When Using O&O ShutUp10 I recommend that you apply the recommended settings to both Local Machine and Current User, to do this you must:
+                    <p>When Using O&O ShutUp10 I recommend that you apply the recommended settings to both Local Machine and Current User, to do this you must: </p>
                         <ol>
                             <li>Click on Current User, this will make the settings apply to your user account.</li>
                             <li>Click on Actions at the top of the page.</li>
@@ -108,7 +106,6 @@
                             <li>Click on only apply recommended settings.</li>
                             <li>Now close O&O ShutUp10, this will apply the changes, you might need to restart your PC if you are asked.</li>
                         </ol>
-                    </p>
                     <p>ShutUp10 is free to download for home usage, however it is proprietary, this means that you must comply with the EULA that is outlined on the O&O Software website, you can find a link below to the O&O Software website.</p>
                     <a class="linkbutton" title="Visit O&O Software Website" href="https://www.oo-software.com/en/shutup10">Visit O&O Software Webpage</a>
             <h3 id="what-to-expect">What can I expect after debloating Windows 11?</h3>
