--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -66,6 +66,7 @@
             <h2 id="Unsupported-pc">What to do if my PC is unsupported?</h2> 
                 <p>If your PC is not officially supported for Windows 11 you might still be able to run it without any issues on your existing PC, to determine if your PC is capable of running Windows 11 you need to find out if it supports a feature called POPCNT as this is a new hardware requirement that Windows 11 has introduced, most computers newer than 2011 support this feature.</p>
                 <p>I have created a special program called 'check_popcnt.exe' that can detect if your computer supports this feature, you can download it from via the link below.</p>
+                <p><strong>WARNING: The download is currently reporting as malicious; I would advise against downloading at the moment if you are using Windows Defender or McAfee as this appear to be causing a false detection.</strong></p>
                 <a class="linkbutton" title="Download check_popcnt.exe" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/check_popcnt.exe">Download check_popcnt.exe</a>
                 <p><strong>Notice: You might find that the download is blocked, this is because it is a .exe program which has no publisher certification this means that the browser cannot verify that the program is safe as it has not been created by an official software vendor.</strong></p>
                 <img src="upgrading_to_windows11/download_blocked.png" alt="Download blocked">
