Added new Download POPCNT Checker page
Added new popcnt checker download page, upgrading to windows 11 now directs users to the download page instead of a direct download.

--- a/download_centre.html
+++ b/download_centre.html
@@ -55,6 +55,12 @@
                 <p>Download and learn to use the Multi-Plane Overlay Fix Registry Files. These files can be used to fix the black artifacts and black screen issues that are often associated Hardware Acceleration.</p> <!-- Article excerpt -->
                 <a href="download_centre/multi-pane_overlay_disable_reg.html" title="Visit MPO Fix download page">Download Page</a> <!-- Link to full article -->
             </div>
+            <div class="articlecolumn" title="POPCNT Checker"> <!-- Article column -->
+                <h3>POPCNT Checker</h3> <!-- Article title -->
+                <img src="download_centre/popcnt_checker/popcnt.png" alt="An image representing the POPCNT Checker program" title="Image representing the POPCNT Checker program"><!-- Image related to the article -->
+                <p>Download the Hackboto Tech Tips POPCNT Checker program, learn if your computer system is ready for Windows 11 24H2 by checking to see if it supports the POPCNT CPU instruction.</p> <!-- Article excerpt -->
+                <a href="download_centre/popcnt_checker.html" title="Visit POPCNT Checker download page">Download Page</a> <!-- Link to full article -->
+            </div>
         </div>
     </section>
     <footer title="Website Footer"> <!-- Footer section -->
