--- a/map.html
+++ b/map.html
@@ -49,6 +49,7 @@
                 <ul><!-- Unordered list -->
                     <li><h3><a href="download_centre/settings_optimiser.html" title="Go to Settings Optimiser download page">Settings Optimiser</a></h3></li>
                     <li><h3><a href="download_centre/multi-pane_overlay_disable_reg.html" title="Go to Multi-Plane Overlay fix download page">MPO Fix .reg</a></h3></li>
+                    <li><h3><a href="download_centre/popcnt_checker.html" title="Go to POPCNT Checker download page">POPCNT Checker</a></h3></li>
                 </ul>
             <h2><a href="legal.html" title="Go to Legal">Legal</a></h2> <!-- Level 2 heading -->
         </div>
