--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -66,11 +66,8 @@
             <h2 id="Unsupported-pc">What to do if my PC is unsupported?</h2> 
                 <p>If your PC is not officially supported for Windows 11 you might still be able to run it without any issues on your existing PC, to determine if your PC is capable of running Windows 11 you need to find out if it supports a feature called POPCNT as this is a new hardware requirement that Windows 11 has introduced, most computers newer than 2011 support this feature.</p>
                 <p>I have created a special program called 'check_popcnt.exe' that can detect if your computer supports this feature, you can download it from via the link below.</p>
-                <p><strong>WARNING: The download is currently reporting as malicious; I would advise against downloading at the moment if you are using Windows Defender or McAfee as this appear to be causing a false detection.</strong></p>
-                <a class="linkbutton" title="Download check_popcnt.exe" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/check_popcnt.exe">Download check_popcnt.exe</a>
-                <p><strong>Notice: You might find that the download is blocked, this is because it is a .exe program which has no publisher certification this means that the browser cannot verify that the program is safe as it has not been created by an official software vendor.</strong></p>
-                <img src="upgrading_to_windows11/download_blocked.png" alt="Download blocked">
-                <p>If the download is blocked, you need to hover over the download and click on the three dots '...', you then need to click 'Keep'.</p>
+                <p><strong>WARNING: The download is currently reporting as malicious; I would advise against downloading at the moment if you are using Windows Defender or McAfee as these appear to be causing a false detection.</strong></p>
+                <a class="linkbutton" title="Visit download page for POPCNT Checker." href="https://hackbototechtips.github.io/download_centre/popcnt_checker.html">Visit POPCNT Checker Download Page</a>
             <h3 id="POPCNT">Using check_popcnt.exe</h3>
             <img src="upgrading_to_windows11/open_check_popcnt.png" alt="Download Menu">
             <p>Once you have downloaded the check_popcnt.exe program, you just need to open it, simply click 'Open file' from the download menu or navigate to the download location and open it from there.</p>
@@ -122,7 +119,7 @@
             <p>Debloating your computer system is a really straight forward process, you can learn about the benefits of debloating your computer system, and how you can do it by visiting my guide which is linked below.</p>
             <a class="linkbutton" href="https://hackbototechtips.github.io/pc_tips/windows_debloat.html" title="Visit my guide on debloating Windows 11 24H2">Guide on Debloating Windows 11 24H2</a>
             <hr>
-        <p>Page Updated: 30/05/2024</p>
+        <p>Page Updated: 01/06/2024</p>
         <p>Page Author: Hackboto</p>
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
