--- a/download_centre/popcnt_checker.html
+++ b/download_centre/popcnt_checker.html
@@ -48,9 +48,8 @@
                 <p>The POPCNT Checker can be handy for things like upgrading to Windows 11 on unsupported hardware, this is because one of the new requirements of the latest Windows 11 24H2 operating system is that your CPU supports POPCNT, if you upgrade and your PC does not support it, it will stop working.</p>
             <h2 id="download">Downloading the POPCNT Checker</h2>
                 <p>You can download the check_popcnt.exe using the download button below, this should start the download process.</p>
-                <p><strong>WARNING: The download is currently reporting as malicious; I have taken the link down as a precaution.</strong></p>
-                <a class="linkbutton" title="Download check_popcnt.exe" href="">Download check_popcnt.exe</a>
-                    <p><strong>Notice: You might find that the download is blocked, this is because it is a .exe program which has no publisher certification this means that the browser cannot verify that the program is safe as it has not been created by an official software vendor.</strong></p>
+                <a class="linkbutton" title="Download check_popcnt.exe" href="https://github.com/H90HSORH0J30JHDSRH/hackbototechtipsfiles/releases/download/downloads/check_popcnt.exe">Download check_popcnt.exe</a>
+                    <p><strong>Notice: You might find that the download is blocked, this is because it is a .exe program which has no publisher certification, this means that the browser cannot verify that the program is safe as it has not been created by an official software vendor.</strong></p>
                 <img src="popcnt_checker/download_blocked.png" alt="Download blocked">
                     <p>If the download is blocked, you need to hover over the download and click on the three dots "...", you then need to click "Keep".</p>
                     <h2 id="how-to-use">How do I use the POPCNT Checker?</h2> 
@@ -62,7 +61,7 @@
                 <img src="popcnt_checker/popcnt.png" alt="POPCNT is NOT supported on this processor">
                 <p>If your PC has this message "POPCNT is NOT supported on this processor", your PC does not support the POPCNT instruction.</p>
         <hr> 
-        <p>Page Updated: 01/06/2024</p>
+        <p>Page Updated: 02/06/2024</p>
         <p>Page Author: Hackboto</p>
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
