--- a/download_centre/multi-pane_overlay_disable_reg.html
+++ b/download_centre/multi-pane_overlay_disable_reg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is the download page for the Hackboto Tech Tips Multi-Plane Overlay Registry Fix for black screens and artefacts when using Hardware Acceleration on Windows 10/ 11">
+    <meta name="description" content="Download page for the Hackboto Tech Tips Multi-Plane Overlay Registry Fix for black screens and artefacts when using Hardware Acceleration on Windows 10/ 11">
     <meta name="keywords" content="Hardware, Acceleration, Black Screen, Fix, Multi-Plane Overlay, MPO">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="../favicon/HTTfavicon.png">
