--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8"> <!-- Define character encoding for the document -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Set the viewport for responsive design -->
-    <meta name="description" content="Hackboto Tech Tips offers help and advice to those who are struggling with modern tech, we offer advice and support on maintaining devices, buying the latest devices, and optimising their existing devices to better meet their needs.">
+    <meta name="description" content="Hackboto Tech Tips offers help and advice on maintaining devices, buying the latest devices, and optimising existing devices.">
     <meta name="keywords" content="tech, tips, windows, help, advice, support, debloat">
     <meta name="robots" content="index, follow"> <!-- Allow search engine indexing -->
     <meta name="google-site-verification" content="f8S6yQTL9ORzSZWiIDBfWoLoQwuuY6HW2ENlfExnMmo">
