--- a/download_centre/popcnt_checker.html
+++ b/download_centre/popcnt_checker.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is the download page for the Hackboto Tech Tips Settings Optimiser.">
-    <meta name="keywords" content="Software, Application, Windows 11, 24H2, popcnt">
+    <meta name="keywords" content="Software, checker, Windows 11, 24H2, popcnt">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="../favicon/HTTfavicon.png">
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
