--- a/index.html
+++ b/index.html
@@ -42,17 +42,19 @@
         <div class="articles">
             <h2>Why I started this website</h2> <!-- Section heading -->
             <p>I have started this website to help improve the world around me by sharing my technical knowledge to those who are less tech savvy than myself. There are many users of technology around the world but very few of these technology users know the essentials such as maintaining their devices or buying appropriate devices for their needs.</p>
-            <div class="featuredarticle" title="The problems with Windows 11">
-                <h3>Windows 11</h3> <!-- Article title -->
-                <p>Windows 11 has artificial hardware requirements blocking it from installing onto older computers, most people do not know that their existing computers can run it, this is because Microsoft make a commission from most PC sales and will make money from you replacing your computer unnecessarily, thus polluting the planet in the process.</p>
-            </div>
-            <div class="featuredarticle" title="The problems with iPhone and Smartphones">
-                <h3>iPhone and Smartphones</h3>
-                <p>Is your old smartphone or iPhone really slow? Most new smartphones and iPhones only feel faster because they are new, your old devices are vertically the same, the only difference is that your old phone has become cluttered with old useless junk that is bogging it down, get rid of this junk and you will be surprised with how much better it will run.</p>
-            </div>
-            <div class="featuredarticle" title="The problems with advertising">
-                <h3>Advertising</h3>
-                <p>Everyone has heard of ads, but did you know that you can get rid of all those pesky ads from the games you play, from the websites you use, even the ones built into your devices. You can install a DNS based adblocker for free and it will work on any of your devices, even your Smart TV, thus improving the performance of your devices and making them less frustrating to use.</p>
+            <div class="articlerow">
+                <div class="featuredarticle" title="The problems with Windows 11">
+                    <h3>Windows 11</h3> <!-- Article title -->
+                    <p>Windows 11 has artificial hardware requirements blocking it from installing onto older computers, most people do not know that their existing computers can run it, this is because Microsoft make a commission from most PC sales and will make money from you replacing your computer unnecessarily, thus polluting the planet in the process.</p>
+                </div>
+                <div class="featuredarticle" title="The problems with iPhone and Smartphones">
+                    <h3>iPhone and Smartphones</h3>
+                    <p>Is your old smartphone or iPhone really slow? Most new smartphones and iPhones only feel faster because they are new, your old devices are vertically the same, the only difference is that your old phone has become cluttered with old useless junk that is bogging it down, get rid of this junk and you will be surprised with how much better it will run.</p>
+                </div>
+                <div class="featuredarticle" title="The problems with advertising">
+                    <h3>Advertising</h3>
+                    <p>Everyone has heard of ads, but did you know that you can get rid of all those pesky ads from the games you play, from the websites you use, even the ones built into your devices. You can install a DNS based adblocker for free and it will work on any of your devices, even your Smart TV, thus improving the performance of your devices and making them less frustrating to use.</p>
+                </div>
             </div>
         </div>
     </section>
