--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <meta name="google-site-verification" content="f8S6yQTL9ORzSZWiIDBfWoLoQwuuY6HW2ENlfExnMmo">
     <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="favicon/HTTfavicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Homepage | Hackboto Tech Tips</title> <!-- Document title -->
 </head>
