--- a/download_centre/popcnt_checker.html
+++ b/download_centre/popcnt_checker.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Software, checker, Windows 11, 24H2, popcnt">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="../favicon/HTTfavicon.png">
+    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>POPCNT Checker | Hackboto Tech Tips</title>
 </head>
