--- a/map.html
+++ b/map.html
@@ -8,6 +8,7 @@
     <meta name="robots" content="index, follow"> <!-- Allow search engine indexing -->
     <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="favicon/HTTfavicon.png">
+    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Sitemap | Hackboto Tech Tips</title> <!-- Document title -->
 </head>
