--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Windows 11, upgrade, help, advice">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="../favicon/HTTfavicon.png">
+    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Upgrading to Windows 11 | Hackboto Tech Tips</title>
 </head>
