--- a/pc_tips/windows_debloat.html
+++ b/pc_tips/windows_debloat.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Windows, debloat, optimisation, tool, performance, old, computer">
     <link rel="stylesheet" href="../stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="../favicon/HTTfavicon.png">
+    <link href='https://fonts.googleapis.com/css?family=Anton' rel='stylesheet'>
     <script src="../scripts.js"></script> <!-- Link to external JavaScript file -->
     <title>Debloating Windows | Hackboto Tech Tips</title>
 </head>
