Add contact page
The website now has a contact page where users can contact me.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a class="active" href="index.html" title="Go to Home">Home</a> <!-- Navigation links -->
             <a href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
             <a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
-            <a href="" title="Visit Contact page">Contact (Coming Soon)</a>
+            <a href="contact.html" title="Visit Contact page">Contact</a>
         </div>
         <div class="columnclose">
             <div class="nav"><a href="javascript:void(0);" rel="nofollow" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</a></div> <!-- Navigation hamburger icon -->
