--- a/pc_tips.html
+++ b/pc_tips.html
@@ -26,7 +26,7 @@
             <a href="index.html" title="Go to Home">Home</a> <!-- Navigation links -->
             <a class="active" href="pc_tips.html" title="Explore tips and tricks for your PC">PC Guides</a>
             <a href="download_centre.html" title="Find file downloads here.">Download Centre</a>
-            <a href="" title="Visit Contact page">Contact (Coming Soon)</a>
+            <a href="contact.html" title="Visit Contact page">Contact</a>
         </div>
         <div class="columnclose">
             <div class="nav"><a href="javascript:void(0);" rel="nofollow" class="icon" onclick="navHamburger()" title="Toggle Navigation">☰More</a></div> <!-- Navigation hamburger icon -->
@@ -60,12 +60,6 @@
                 <img src="pc_tips/hardware_acceleration_black_screen_fix/black_artefacts_mockup.png" alt="An image showing black squares on Microsoft Word" title="mock-up illustrating hardware acceleration artefacts"><!-- Image related to the article -->
                 <p>Are you having issues with black screens, black boxes, black checkerboards etc on your Windows 10/ 11 PC? If you are, learn how you can fix the problem without disabling Hardware Acceleration.</p> <!-- Article excerpt -->
                 <a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn About Fixing Black Screens and Artefacts in Windows 10/ 11 Without Disabling HW Acceleration">Read Article</a> <!-- Link to full article -->
-            </div>
-            <div class="articlecolumn" title="Getting the content ready"> <!-- Article column -->
-                <h3>Getting the content ready</h3> <!-- Article title -->
-                <img src="pc_tips/placeholder.png" alt="just an image that reads out placeholder" title="placeholder image"><!-- Image related to the article -->
-                <p>There is not much here at the moment, bear with me as I am still getting the website constructed.</p> <!-- Article excerpt -->
-                <a href="" title="dead link">More Coming Soon</a> <!-- Link to full article -->
             </div>
         </div>
     </section>
