--- a/contact.html
+++ b/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8"> <!-- Define character encoding for the document -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Set the viewport for responsive design -->
-    <meta name="description" content="Learn about Eco-Friendly Living and how to get in touch with us. Discover tips and advice to save money and reduce environmental impacts.">
-    <meta name="keywords" content="Eco-Friendly Living, sustainability, eco living, about us, contact, environmental impacts">
+    <meta name="description" content="Contact Hackboto Tech Tips via this page.">
+    <meta name="keywords" content="Hackboto, Tech, Tips, Contact">
     <meta name="robots" content="index, follow"> <!-- Allow search engine indexing -->
     <link rel="stylesheet" href="stylesheet.css"> <!-- Link to external stylesheet -->
     <link rel="icon" type="image/x-icon" href="favicon/HTTfavicon.png">
