Add new optimising windows article

--- a/pc_tips.html
+++ b/pc_tips.html
@@ -49,6 +49,12 @@
                 <p>Did you know that Windows 10 is EOL in 2025, if you do not upgrade to Windows 11 by then you will no longer receive security updates, this article will explain what you need know and what you need to do to upgrade to Windows 11.</p> <!-- Article excerpt -->
                 <a href="pc_tips/upgrading_to_windows11.html" title="Read More about upgrading to Windows 11">Read Article</a> <!-- Link to full article -->
             </div>
+            <div class="articlecolumn" title="Optimising Windows 10/ 11"> <!-- Article column -->
+                <h3>Optimising Windows 10/ 11</h3> <!-- Article title -->
+                <img src="pc_tips/windows_optimise/windows_errors.png" alt="PC showing lots of error popups" title="Optimising Windows 10/ 11."><!-- Image related to the article -->
+                <p>Has your PC gotten very slow, are errors popping up all the time, is it taking you forever to get stuff done? If you are facing lacklustre performance and high levels of instability you should read on as this article will explain how you can overcome these issues.</p> <!-- Article excerpt -->
+                <a href="pc_tips/windows_optimise.html" title="Read More about Optimising Windows 10/ 11">Read Article</a> <!-- Link to full article -->
+            </div>
             <div class="articlecolumn" title="Debloat Windows 11 24H2"> <!-- Article column -->
                 <h3>Debloat Windows 11 24H2</h3> <!-- Article title -->
                 <img src="pc_tips/debloat.png" alt="An image representing bloat turning into a simplistic interface." title="Image representing the bloat in Windows 11."><!-- Image related to the article -->
