--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -54,7 +54,7 @@
                 <p>Windows 11 was released on 05/10/2021, making it three years old this year, if you are running Windows 10 or older you need to upgrade to ensure that your PC remains updated and compatible with the latest software.</p>
                 <p>Windows 10 will stop receiving security updates in 2025, this means that you have just under a year to upgrade or risk becoming vulnerable to cyber-attacks.</p>
                 <p>Currently you can upgrade from Windows 10 to Windows 11 for free *expected to end in September 2024*, the upgrade process is really simple and straight forward provided that you have a supported PC, if your PC is not supported you can still upgrade but it will be a bit more complicated.</p>
-                <p><strong>I advise that you back-up your computer before proceeding, a guide on this will be available soon.</strong></p>
+                <p><strong>I advise that you backup your computer before proceeding, a guide on this will be available soon.</strong></p>
             <h2 id="how-to-tell-if-supported">How do I tell if my PC is supported?</h2> 
             <p>It is really simple to tell if your computer is supported, you need to use free Microsoft PC Health Check App as it is the official way to tell if your computer is supported. You can the PC Health Check App below.</p>
             <a class="linkbutton" title="Download Microsoft PC Health Check App" href="https://aka.ms/GetPCHealthCheckApp">Download PC Health Checker</a>
