--- a/map.html
+++ b/map.html
@@ -18,7 +18,7 @@
             <img src="index/BrandLogo.png" alt="company logo" title="Hackboto Tech Tips logo"> <!-- Logo image -->
         </div>
         <div class="headertext">
-            <p>Hackboto Tech Tips | Sitemap</p> <!-- Header text -->
+            <p>Hackboto Tech Tips</p> <!-- Header text -->
         </div>
     </header>
     <nav class="nav" id="Nav" title="Main Navigation"> <!-- Navigation section -->
