--- a/pc_tips.html
+++ b/pc_tips.html
@@ -68,6 +68,14 @@
                 <a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn About Fixing Black Screens and Artefacts in Windows 10/ 11 Without Disabling HW Acceleration">Read Article</a> <!-- Link to full article -->
             </div>
         </div>
+        <div class="articlerow"> <!-- Article row -->
+            <div class="articlecolumn" title="Backing up your Windows 10/ 11 PC"> <!-- Article column -->
+                <h3>Backing up Windows 10/ 11</h3> <!-- Article title -->
+                <img src="pc_tips/windows_backup/computer_backup.png" alt="An image representing secure data." title="backing up your PC to external storage."><!-- Image related to the article -->
+                <p>Do you regularly back up your files and computer system? If not, you need to start doing so in the event that your PC fails unexpectedly or becomes corrupted, learn about backing up your computer the correct way without the "Cloud".</p> <!-- Article excerpt -->
+                <a href="pc_tips/windows_backup.html" title="Learn About backing up your computer and your files.">Read Article</a> <!-- Link to full article -->
+            </div>
+        </div>
     </section>
     <footer title="Website Footer"> <!-- Footer section -->
         <div class="footertext">
