--- a/pc_tips/windows_optimise.html
+++ b/pc_tips/windows_optimise.html
@@ -59,7 +59,8 @@
                     <li>Defrag your Hard Drive</li>
                     <li>Reinstall Windows 10 /11.</li>
                 </ol>
-                <p><strong>Before attempting steps two and three I would strongly advise that you backup your computer system. Guide coming soon.</strong></p>
+                <p><strong>I advise that you backup your computer before proceeding, you can learn about backing up your computer and your files in my "Backing Up Windows 10/ 11" guide, link below.</strong></p>
+                <a class="linkbutton" title="Visit Backing Up Windows 10/ 11 guide" href="https://hackbototechtips.github.io/pc_tips/windows_backup.html">View Backing Up Windows 10/ 11 guide</a>
             <h3 id="clearing-browser-cache">How do I clear my Browser Cache?</h3>
                 <p>Clearing your browser cache is really easy, it might be slightly different depending on the browser you use, this guide will walk you through Microsoft Edge, however Google Crome is very similar as they are built on the same technology.</p>
                 <img src="windows_optimise/browser_step_1.png" alt="an image representing Microsoft Edge, hovering over three dots in the toolbar.">
@@ -109,7 +110,7 @@
                         <p>Make sure that you agree to the following listed on your screen, once you are sure that you have made a backup of your computer and your files, you can click on the Reset button, this will then start the reset process.</p>
                         <p><strong>This process will take a while depending on the age of your computer system, it should not take any longer than 12 hours, if the process takes more than 12 hours you will need to contact Microsoft Support for help, or you will need to roll your PC back to the backup you made before starting.</strong></p>
         <hr>
-        <p>Page Updated: 05/06/2024</p>
+        <p>Page Updated: 08/06/2024</p>
         <p>Page Author: Hackboto</p>
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
