--- a/map.html
+++ b/map.html
@@ -46,6 +46,7 @@
                 <li><h3><a href="pc_tips/windows_optimise.html" title="Learn how you can optimise your Windows PC">Optimising Windows 10/ 11</a></h3></li>
                 <li><h3><a href="pc_tips/windows_debloat.html" title="Learn how and why you should debloat your PC.">Debloating Windows 11 24H2</a></h3></li>
                 <li><h3><a href="pc_tips/hardware_acceleration_black_screen_fix.html" title="Learn how you can fix the back screen artefacts caused by hardware acceleration.">Fix Hardware Acceleration Black Screen</a></h3></li>
+                <li><h3><a href="pc_tips/windows_backup.html" title="Learn how you can backup your Windows PC.">Backing Up Windows 10/ 11</a></h3></li>
             </ul>
             <h2><a href="download_centre.html" title="Go to File Downloads">Download Centre</a></h2>
                 <ul><!-- Unordered list -->
