--- a/pc_tips/upgrading_to_windows11.html
+++ b/pc_tips/upgrading_to_windows11.html
@@ -54,7 +54,8 @@
                 <p>Windows 11 was released on 05/10/2021, making it three years old this year, if you are running Windows 10 or older you need to upgrade to ensure that your PC remains updated and compatible with the latest software.</p>
                 <p>Windows 10 will stop receiving security updates in 2025, this means that you have just under a year to upgrade or risk becoming vulnerable to cyber-attacks.</p>
                 <p>Currently you can upgrade from Windows 10 to Windows 11 for free *expected to end in September 2024*, the upgrade process is really simple and straight forward provided that you have a supported PC, if your PC is not supported you can still upgrade but it will be a bit more complicated.</p>
-                <p><strong>I advise that you backup your computer before proceeding, a guide on this will be available soon.</strong></p>
+                <p><strong>I advise that you backup your computer before proceeding, you can learn about backing up your computer and your files in my "Backing Up Windows 10/ 11" guide, link below.</strong></p>
+                <a class="linkbutton" title="Visit Backing Up Windows 10/ 11 guide" href="https://hackbototechtips.github.io/pc_tips/windows_backup.html">View Backing Up Windows 10/ 11 guide</a>
             <h2 id="how-to-tell-if-supported">How do I tell if my PC is supported?</h2> 
             <p>It is really simple to tell if your computer is supported, you need to use free Microsoft PC Health Check App as it is the official way to tell if your computer is supported. You can the PC Health Check App below.</p>
             <a class="linkbutton" title="Download Microsoft PC Health Check App" href="https://aka.ms/GetPCHealthCheckApp">Download PC Health Checker</a>
@@ -115,11 +116,12 @@
                 </ol>
             <p>Checking for updates is really easy on Windows 11 as you just need to open the Settings app and navigate to 'Windows Update', alternatively you can use the link below to check for Windows updates.</p>
             <a class="linkbutton" title="Launch Settings: Check for Windows updates." href="ms-settings:windowsupdate">Check for Windows updates</a>
-            <p><strong>A guide on optimising your computer system is underway, until then you will just have to wait.</strong></p>
+            <p>It is important to optimise your Windows 10/ 11 computer system to ensure that you get the most out of it, learn about why and how you should optimise your PC by visiting my guide.</p>
+            <a class="linkbutton" href="https://hackbototechtips.github.io/pc_tips/windows_optimise" title="Visit my guide on optimising your Windows PC">Guide on optimising Windows 10/ 11</a>
             <p>Debloating your computer system is a really straight forward process, you can learn about the benefits of debloating your computer system, and how you can do it by visiting my guide which is linked below.</p>
             <a class="linkbutton" href="https://hackbototechtips.github.io/pc_tips/windows_debloat.html" title="Visit my guide on debloating Windows 11 24H2">Guide on Debloating Windows 11 24H2</a>
             <hr>
-        <p>Page Updated: 02/06/2024</p>
+        <p>Page Updated: 08/06/2024</p>
         <p>Page Author: Hackboto</p>
     </article>
     <footer class="asidefooter" title="Website Footer"> <!-- Footer section -->
