Add backup guide link

--- a/pc_tips/windows_debloat.html
+++ b/pc_tips/windows_debloat.html
@@ -71,7 +71,8 @@
                         <li>O&O Software: O&O ShutUp10++</li>
                     </ol>
                 <p><strong>I advise you to use caution when using random cleanup and debloat tools from the internet as some of these might not be correctly tested or might be malicious and intentionally damage your computer system, therefore I recommend that you stick to the scripts and tools that I have tested personally.</strong></p>
-                <p><strong>Before you run any scripts on your computer system, I would advise you to back up your system first so that you can restore it back to its previous state in the event that anything goes wrong.</strong> Guide on this coming soon!</p>
+                <p><strong>I advise that you backup your computer before proceeding, you can learn about backing up your computer and your files in my "Backing Up Windows 10/ 11" guide, link below.</strong></p>
+                <a class="linkbutton" title="Visit Backing Up Windows 10/ 11 guide" href="https://hackbototechtips.github.io/pc_tips/windows_backup.html">View Backing Up Windows 10/ 11 guide</a>
             <h3 id="hackboto-settings-script">Hackboto Tech Tips: System_Settings_Optimiser & User_Settings_Optimiser</h3>
                 <img src="windows_debloat/settings_optimise_image.png" alt="an image representing the Hackboto Tech Tips settings optimiser scripts.">
                     <p class="imgdescription">It might not be the prettiest solution but the Hackboto Tech Tips System_Settings_Optimiser & the User_Settings_Optimiser scripts are really simple to use and require no technical knowledge to operate.</p>
